# AlgDSLabsRep

./: .gitignore  README.md  Графы++.drawio
Lab1/: CMakeLists.txt  HeapSort.inl  PlotScript.gpi  QuickSortHoare.inl  ShellSort.inl  main.cpp  statistics.inl
Lab1/Report/: Лаб1_Отчет.docx
Lab1/Results/: HeapSortOut.txt  PlotScript.gpi
Lab1/Results/10000_одинаковые массивы с маленьким шагом/: HeapSortOut.txt  QuickSortHoareOut.txt  ShellSortOut.txt
Lab1/Results/1000iter/: HeapSortOut.txt  QuickSortHoareOut.txt  ShellSortOut.txt
Lab1/Results/100_1000_одинаковые массивы/: HeapSortOut.txt  QuickSortHoareOut.txt  ShellSortOut.txt
Lab1/Results/10K_100K/: QuickSortHoareOut.txt  ShellSortOut.txt
Lab1/Results/от10_до100_шаг10/: HeapSortOut.txt  QuickSortHoareOut.txt  ShellSortOut.txt
Lab5/: BaseGraph.h  CMakeLists.txt  FloydWarshellOut.txt  Func.h  Graph.h  IGenAlgFindAlgGraph.h  PlotGraph.bash  PlotGraph.gpi  PlotGraphCircleTest.gpi  PlotGraphTest.gpi  PlotScript.bash  PlotScript.gpi  Plotfilelist.txt  ShortestPathFunc.h  StatisticsGraph.inl  VisualGraph.h  edges.h  main.cpp  main_BellmanFord_Demo.cpp  main_Dijkstra_Demo.cpp  main_FromFileDebug.cpp  main_GenerateAdjacency.cpp  main_GenerateGraph_Demo.cpp  main_StatisticsGraph_SimpleDemo.cpp  main_VisualGraphDemo.cpp  plothandler.h  presenthandler.h  statisticsGraph.inl  test.txt  test2.txt  test3.txt  vertices.h  visual.h  Инструкция.xcf  Что сделано.txt  лекало.xcf
Lab5/Dijkstra/: CMakeLists.txt  main.cpp
Lab5/Report/: VisualGraphReport++++++1+++.docx
Lab5/Results/FlDijk/: DijkstraOut.txt
Lab5/Results/FlDijkBell_50/: BellmanFordOut.txt  DijkstraOut.txt  FloydWarshellOut.txt  PlotScript.gpi
Lab5/Results/FlDijkBell_big/: BellmanFordOut.txt  FloydWarshellOut.txt  PlotScript.gpi
Lab5/Results/FlDijk_50/: DijkstraOut.txt  FloydWarshellOut.txt
Lab5/Results/График/: FloydWarshellOut.txt
Lab5/UML/: Графы+++++++1.drawio
Lab5/VariadicTemplateTest/: main.cpp
Lab5/bashtest/: PlotGraph.bash  PlotGraph.gpi  test.bash  test.gpi
Lab5/chartest/: main.cpp
Lab5/classtest/: CMakeLists.txt  main.cpp
Lab6/: AStar_main.cpp  AldousBroder_main.cpp  BinaryTree_main.cpp  CMakeLists.txt  Config.txt  Dijkstra_main.cpp  Funcs.h  Help.txt  Lee2Waves_main.cpp  Lee_main.cpp  MazeGenerationAlgs.h  MazeSearchAlg.h  Menu.txt  PlotScript.bash  StatisticsMaze.inl  StatisticsMazeSearch.inl  StatisticsMazeSearch_main.cpp  StatisticsMaze_main.cpp  Welcome.txt  Wilson_main.cpp  cli_debug_main.cpp  cli_main.cpp  copyfiles.cmake  main.cpp  maze.h  mazeWeighted_debug_main.cpp  maze_debug_main.cpp
Lab6/Other/Report/: ReportAbstracts.docx  labr+.docx  labr.docx  project_14_05_2022+.docx  project_14_05_2022.docx  ~$labr.docx  ~$portAbstracts.docx  ~$б6_Отчет.docx  Аннотация.docx  Лаб6_Отчет.docx  Лаб6_Отчет_рисунки.docx  Отчет по проекту.docx  Тезисы к докладу+.docx  Тезисы к докладу.docx
Lab6/Other/Report/old/: Лаб6_Отчет+.docx  Лаб6_Отчет.docx
Lab6/Other/Report/Тезисы к докладу/: ReportAbstracts+.docx  ReportAbstracts.docx  ~$блон для подготовки статьи++.doc  ~WRL0003.tmp  Что нужно сделать.txt  Шаблон для подготовки статьи++.doc  Шаблон для подготовки статьи+.doc  Шаблон для подготовки статьи.doc
Lab6/Other/UML/: AStar.drawio  menu.drawio  Команды.txt
Lab6/Results/: MazeOut1000_10.txt  MazeOut100_10.txt  MazeOut10_100.txt  MazeOut10_10_2.txt  MazeOut25000_10.txt  maze_Demo.txt  res.txt
Lab6/Results/AStar/: Rez
Lab6/Results/AldousBroder/: MazeOut10000_10.txt  MazeOut100_100.txt  MazeOut10_10.txt
Lab6/Results/AldousBroder/Здесь был баг с отображением стенки/: MazeOut.txt
Lab6/Results/BinaryTree/: BinaryTreeMazeOut200_20.txt  BinaryTreeMazeOut20_200.txt
Lab6/Results/BinaryTree/20_20/: BinaryTreeMazeOut_alpha0.txt  BinaryTreeMazeOut_alpha1.txt  BinaryTreeMazeOut_alpha2.txt  BinaryTreeMazeOut_alpha3.txt
Lab6/Results/Dijkstra/: Rez
Lab6/Results/Lee/: Stepbystep
Lab6/Results/Lee2Waves/: Lee_Demo.txt
Lab6/Results/StatisticsMaze/NEnd10000/: BinaryTreeOut.txt
Lab6/Results/StatisticsMaze/NEnd1404/: BinaryTreeOut.txt  PlotScript.gpi
Lab6/Results/StatisticsMaze/NEnd254/: AldousBroderOut.txt  BinaryTreeOut.txt  WilsonOut.txt
Lab6/Results/StatisticsMaze/NEnd49_small/: AldousBroderOut.txt  BinaryTreeOut.txt  PlotScript.gpi  WilsonOut.txt  WilsonSerialOut.txt
Lab6/Results/StatisticsMaze/Wilson_WilsonSerial_AldousBroder_BinaryTree_big/: BinaryTreeOut.txt  PlotScript.gpi  WilsonSerialOut.txt
Lab6/Results/StatisticsMazeSearch/: AStar_Demo.txt  Dijkstra_Demo.txt  Lee2Waves_Demo.txt  Lee_Demo.txt
Lab6/Results/StatisticsMazeSearch/4_100/: AStarOut.txt  DijkstraOut.txt  Lee2WavesOut.txt  LeeOut.txt
Lab6/Results/StatisticsMazeSearch/4_104/: AStarOut.txt  DijkstraOut.txt  Lee2WavesOut.txt  LeeOut.txt  PlotScript.gpi  Plotfilelist.txt
Lab6/Results/StatisticsMazeSearch/4_200/: AStarOut.txt  DijkstraOut.txt  PlotScript.gpi
Lab6/Results/StatisticsMazeSearch/4_504_шаг125/: AStarOut.txt  PlotScript.gpi
Lab6/Results/StatisticsMazeSearch/temp/: AStarOut.txt  DijkstraOut.txt  PlotScript.gpi  Plotfilelist.txt
Lab6/Results/StatisticsMazeSearch/temp2/: DijkstraOut.txt  LeeOut.txt  PlotScript.gpi
Lab6/Results/StatisticsMazeSearch/temp3/: AStarOut.txt  DijkstraOut.txt
Lab6/Results/StatisticsMazeSearch/Без параллельных потоков_4_500/: AStarOut.txt  DijkstraOut.txt  Lee2WavesOut.txt  LeeOut.txt
Lab6/Results/StatisticsMazeSearch/Без параллельных потоков_4_500_шаг50/: AStarOut.txt  DijkstraOut.txt  Lee2WavesOut.txt  LeeOut.txt  PlotScript.gpi
Lab6/Results/Wilson/: MazeOut100_100.txt
Lab6/Results/WilsonSerial/: MazeOut100_10.txt  MazeOut10_100.txt  MazeOut_1000x1000.txt
Lab6/Results/exe/: Config.txt  Help.txt  Welcome.txt  cli
Lab6/Results/exe_win7_x64/: Config.txt  MazeOut.txt
Lab6/Results/exe_win7_x64_static/: Config.txt  MazeIn.txt  MazeOut.txt
Lab6/Results/Здесь был баг с отображением стенки/: Maze.txt  MazeOut1000_10.txt  MazeOut100_100.txt  res.txt
Lab6/Results/Сравнение времени генерации со временем поиска/: AldousBroderOut.txt  DijkstraOut.txt  Lee2WavesOut.txt  LeeOut.txt  PlotScript.gpi
(+5 files in other folders)
